2005-12-12  Jamey Sharp  <jamey@minilop.net>

	* tests/check_public.c:
	Fix segfault in fail_unless calls and provide more useful error
	messages. Also remove DISPLAY from the environment and test
	ParseDisplay on a null pointer.

2005-12-07  Jamey Sharp  <jamey@minilop.net>

	* src/xcb.h, src/xcb_in.c:
	Use GCC attribute extension, if available, to mark some
	functions deprecated; and rename XCBWaitEvent to
	XCBWaitForEvent, with a deprecated backwards compatibility
	function.

2005-12-07  Jamey Sharp  <jamey@minilop.net>

	* src/xcb.h, src/xcb_conn.c, src/xcb_util.c:
	Rename XCBConnect to XCBConnectToFD, and implement XCBConnect
	and XCBConnectToDisplayWithAuthInfo, as specified by the XcbApi
	documentation. Provide a trivial implementation of deprecated
	XCBConnectBasic for backwards compatibility. Fix XCBParseDisplay
	to accept a null screen pointer.

2005-09-30  Trevor Woerner <twoerner.x@gmail.com>

	reviewer: Jamey Sharp <jamey@minilop.net>

	* Makefile.am, configure.ac, src/Makefile.am, tests/Makefile.am,
	  src/check_all.c, src/check_public.c, src/check_suites.h:
	Created a new directory called "tests" where the unit tests
	will reside, separate from other files. Moved the unit
	test files from the "src" directory into the new "tests"
	directory.

	* configure.ac, tests/CheckLog.xsl, tests/.cvsignore,
	  tests/Makefile.am, tests/check_all.c:
	Added an XSLT transform to post-process the XML log file which
	is generated by the unit test suite into an HTML page. Added
	the necessary hooks into the build system to have this
	translation occur when necessary as part of the build process.

2005-08-15  Trevor Woerner <twoerner.x@gmail.com>

	reviewer: Jamey Sharp <jamey@minilop.net>

	* src/Makefile.am:
	Make builds work when the source and build directories
	are different.

2005-08-03  Trevor Woerner <twoerner.x@gmail.com>

	reviewer: Jamey Sharp <jamey@minilop.net>

	* configure.ac:
	Allow people to not have check as long as they have at