@@ -49,31 +49,45 @@ int XCBPopcount(CARD32 mask)
     return ((y + (y >> 3)) & 030707070707) % 077;
 }
 
-int XCBParseDisplay(const char *name, char **host, int *display, int *screen)
+int XCBParseDisplay(const char *name, char **host, int *displayp, int *screenp)
 {
-    char *colon;
-    int dummy_screen;
-    if(!screen)
-        screen = &dummy_screen;
-    *screen = *display = 0;
+    int len, display, screen;
+    char *colon, *dot, *end;
     if(!name || !*name)
         name = getenv("DISPLAY");
     if(!name)
         return 0;
-    *host = malloc(strlen(name) + 1);
+    colon = strrchr(name, ':');
+    if(!colon)
+        return 0;
+    len = colon - name;
+    ++colon;
+    display = strtoul(colon, &dot, 10);
+    if(dot == colon)
+        return 0;
+    if(*dot == '\0')
+        screen = 0;
+    else
+    {
+        if(*dot != '.')
+            return 0;
+        ++dot;
+        screen = strtoul(dot, &end, 10);
+        if(end == dot || *end != '\0')
+            return 0;
+    }
+    /* At this point, the display string is fully parsed and valid, but
+     * the caller's memory is untouched. */
+
+    *host = malloc(len + 1);
     if(!*host)
         return 0;
-    strcpy(*host, name);
-    colon = strchr(*host, ':');
-    if(!colon)
-    {
-        free(*host);
-        *host = 0;
-        return 0;
-    }
-    *colon = '\0';
-    ++colon;
-    return sscanf(colon, "%d.%d", display, screen);
+    memcpy(*host, name, len);
+    (*host)[len] = '\0';
+    *displayp = display;
+    if(screenp)
+        *screenp = screen;
+    return 1;
 }
 
 int XCBOpen(const char *host, const int display)
